[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/RoundedButtonStyleBox.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/ChallengesDisplay.gd" type="Script" id=4]

[node name="ChallengesDisplay" type="Control"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 75
custom_constants/margin_top = 10
custom_constants/margin_left = 75
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 75.0
margin_top = 10.0
margin_right = 885.0
margin_bottom = 710.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 810.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Challenges"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 810.0
margin_bottom = 72.0
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 810.0
margin_bottom = 700.0
size_flags_vertical = 3

[node name="VBox_Challenges" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 399.0
margin_bottom = 624.0
size_flags_horizontal = 3
custom_constants/separation = 35

[node name="VBox_Unclaimed" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBox_Challenges"]
margin_right = 399.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBox_Challenges"]
margin_top = 310.0
margin_right = 399.0
margin_bottom = 314.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBox_Challenges"]
margin_top = 349.0
margin_right = 399.0
margin_bottom = 624.0
size_flags_vertical = 3

[node name="VBox_Claimed" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBox_Challenges/ScrollContainer"]
margin_right = 399.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 403.0
margin_right = 407.0
margin_bottom = 624.0

[node name="VBox_Details" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 411.0
margin_right = 810.0
margin_bottom = 624.0
size_flags_horizontal = 7

[node name="Button_Exit" type="Button" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 60.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "<"

[connection signal="pressed" from="Button_Exit" to="." method="_on_Button_Exit_pressed"]
